Let's use /go URLs in all of our emails.

--- a/rsrc/email/gotMail.tmpl
+++ b/rsrc/email/gotMail.tmpl
@@ -7,7 +7,7 @@ You received a Whirled mail from ${sender}:
 #end
 To read the message in its entirety and see any attachments, please go to:
 
-${server_url}#mail
+${server_url}go/mail
 
 ----
 If you no longer wish to receive email when you receive a Whirled mail, simply
