--- a/rsrc/email/postcard.tmpl
+++ b/rsrc/email/postcard.tmpl
@@ -9,6 +9,6 @@ ${snap_url}
 "${caption}"
 #end
 
-You can visit this room at http://www.whirled.com/#world-s${scene_id}
+You can visit this room at http://www.whirled.com/go/world-s${scene_id}
 
 This email was sent by ${sender_email} from http://whirled.com/
