--- a/rsrc/email/supportReply.tmpl
+++ b/rsrc/email/supportReply.tmpl
@@ -7,7 +7,7 @@ A reply as been posted to your support request:
 
 You can view this reply in the "Contact Us" section of the "Help" page:
 
-${server_url}/#support
+${server_url}go/support
 
 Thanks,
 
