--- a/rsrc/email/gameInvite.tmpl
+++ b/rsrc/email/gameInvite.tmpl
@@ -23,4 +23,4 @@ ${url}
 If you would prefer not to receive any more invitations to Whirled from your friends,
 please visit this link:
 
-${server_url}#account-optoutg_${invite_id}
+${server_url}go/account-optoutg_${invite_id}
