--- a/rsrc/email/welcome.tmpl
+++ b/rsrc/email/welcome.tmpl
@@ -5,21 +5,21 @@ Your Whirled login is: ${email}
 Congratulations on joining the player-created virtual world! To get started,
 you need to validate your email address by clicking this link:
 
-${server_url}#account-v_${memberId}_${code}
+${server_url}go/account-v_${memberId}_${code}
 
 We've given you 1,000 coins to get you started, now here's all the fun things you can do:
 
 Play Games
 Play with friends, earn coins, have fun!
-${server_url}#games
+${server_url}go/games
 
 Decorate Your Room
 Customize your space with stuff from the shop or your own creations.
-${server_url}#home
+${server_url}go/home
 
 Go Shopping
 Choose from thousands of awesome player-created avatars, furniture, toys, pets and more.
-${server_url}#shop
+${server_url}go/shop
 
 Share Whirled and Earn!
 Invite your Friends, Share your Room or play Games with friends, and earn when they shop!
@@ -27,15 +27,15 @@ http://wiki.whirled.com/Affiliate
 
 Take the Whirled Tour!
 Explore player-created Rooms rated highly by fellow travellers
-${server_url}#world-tour
+${server_url}go/world-tour
 
 Create Stuff
 Whirled is all about the players! Create cool stuff and sell it in the catalog 
 for everyone to buy. A great way to earn coins!
-${server_url}#stuff
+${server_url}go/stuff
 
 Questions? 
-Visit the Whirled FAQ : ${server_url}#help 
+Visit the Whirled FAQ : ${server_url}go/help 
 or the  Whirled Wiki : http://wiki.whirled.com/ for more detailed info.
 
 ========================================================================
@@ -43,7 +43,7 @@ or the  Whirled Wiki : http://wiki.whirled.com/ for more detailed info.
 You are receiving this because your email address was used to
 register at ${server_url}.
 
-Unsubscribe from Whirled email: ${server_url}#account-edit
+Unsubscribe from Whirled email: ${server_url}go/account-edit
 Terms of Service: http://wiki.whirled.com/Terms_of_Service
 Privacy Policy : http://www.threerings.net/about/privacy.html
 
